--- a/index.htm
+++ b/index.htm
@@ -230,8 +230,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	<p><font size="7" color="#FFCC00">MUSIQA &#4633;&#4826;&#4675;</font></p>
 		<p>&nbsp;</p>
 		<div style="position: absolute; top: 924px; left: 352px; width: 525px; height: 525px; z-index: 15">
-			<a href="https://drive.google.com/file/d/1TLAkRJIVZz9jQ3PNprY1Pt27I-GDflu8/view?usp=drive_link">
-			<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525"></a></div>
+			<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525"></div>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
