--- a/index.htm
+++ b/index.htm
@@ -230,7 +230,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	<p><font size="7" color="#FFCC00">MUSIQA &#4633;&#4826;&#4675;</font></p>
 		<p>&nbsp;</p>
 		<div style="position: absolute; top: 924px; left: 352px; width: 525px; height: 525px; z-index: 15">
-			<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525"></div>
+			<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525" dynsrc="../../Documents/My%20Web%20Sites/images/WUccUT.gif" loop="infinite"></div>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
