--- a/index.htm
+++ b/index.htm
@@ -229,8 +229,6 @@ document.addEventListener("DOMContentLoaded", function () {
 	<p>&nbsp;</p>
 	<p><font size="7" color="#FFCC00">MUSIQA &#4633;&#4826;&#4675;</font></p>
 		<p>&nbsp;</p>
-		<div style="position: absolute; top: 924px; left: 352px; width: 525px; height: 525px; z-index: 15">
-			<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525" dynsrc="../../Documents/My%20Web%20Sites/images/WUccUT.gif" loop="infinite"></div>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -310,6 +308,8 @@ document.addEventListener("DOMContentLoaded", function () {
 	<img border="0" id="img1" src="button8.jpg" height="20" width="100" alt="SeeMore " fp-style="fp-btn: Simple Block 3" fp-title="SeeMore " onmouseover="FP_swapImg(1,0,/*id*/'img1',/*url*/'button9.jpg')" onmouseout="FP_swapImg(0,0,/*id*/'img1',/*url*/'button8.jpg')" onmousedown="FP_swapImg(1,0,/*id*/'img1',/*url*/'buttonA.jpg')" onmouseup="FP_swapImg(0,0,/*id*/'img1',/*url*/'button9.jpg')"></a>
 	</font></div>
 <p><font color="#FFCC00">Kamlak Bmbo 2024/2016 E.C </font></p>
+<div style="position: absolute; top: 927px; left: 355px; width: 292px; height: 292px; z-index: 15">
+		<img border="0" src="../../Documents/My%20Web%20Sites/images/WUccUT.gif" width="525" height="525"></div>
 	<div style="position: absolute; top: 701px; left: -131px; width: 205px; height: 184px; z-index: 13">
 		<img border="0" src="images/earth-round-white_background.gif" width="128" height="128"></div>
 		<head>
